# PRozp

./: .gitignore  CMakeLists.txt  README.md  machines
lab01/: CMakeLists.txt
lab02/: CMakeLists.txt  main.c
lab03/: CMakeLists.txt  parallel.c  sequential.c
lab04/: CMakeLists.txt  main.c
lab05/: CMakeLists.txt
